add swagger jwt authentication
